<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FPPC Gift Tracker</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="fair_political_practice_commission">Fair Political Practice Commission</string>
    <string name="gift_tracker">Gift Tracker</string>
    <string name="this_month_">This month:</string>
    <string name="add">Add</string>
    <string name="name_of_source_not_an_acronym_">Name of source (not an acronym)</string>
    <string name="address_business_address_acceptable_">Address (business address acceptable)</string>
    <string name="business_activity_of_any_of_source">Business activity, of any, of source</string>
    <string name="lobbyist">Lobbyist</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search source</string>
    <string name="gift_limit_">Limit left:</string>
    <string name="please_enter_a_valid_date">Please enter a valid date</string>
    <string name="search_source">Search for source</string>
    <string name="what_would_you_like_to_do_">What would you like to do?</string>
    <string name="edit_source">Edit Source</string>
    <string name="add_gift">Add Gift</string>
    <string name="list_of_gift">List of gift</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
    </string-array>
        <string name="search_gift">Search gift</string>
        <string name="edit">Edit</string>
        <string name="delete_source">Delete Source</string>
        <string name="yes">Yes</string>
        <string name="no">No</string>
        <string name="add_source">Add Source</string>
        <string name="edit_contribution">Edit Contribution</string>
        <string name="city_">City:</string>
        <string name="state_">State:</string>
        <string name="zipcode_">Zipcode:</string>
        <string name="zipcode">Zipcode</string>
        <string name="state">State</string>
        <string name="city">City</string>
        <string name="apt_suite_unit">Apt, suite, unit</string>
        <string name="street_address">Street address</string>
        <string name="email_optional_">Email (optional)</string>
        <string name="phone_number_optional_">Phone number (optional)</string>
        <string name="fair_political_practices_commission">Fair Political Practices Commission</string>
        <string name="lobbyist_lobbying_firm">Lobbyist / Lobbying Firm</string>
        <string name="details">Details</string>
        <string name="your_email_address">Your email address</string>
        <string name="send">Send</string>
        <string name="edit_amount">Edit Amount</string>
        <string name="sms">SMS</string>
        <string name="email">Email</string>
        <string name="call">Call</string>

</resources>