<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/name"
            style="@style/summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gift description:"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/gft_description"
            style="@style/summary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/address"
            style="@style/summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gift date"
            android:textSize="14sp" />
        <LinearLayout
            android:id="@+id/gift_date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/gft_month"
                style="@style/summary_text.editcenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" >
                <requestFocus />
            </EditText>
            <TextView
                android:id="@+id/TextView03"
                style="@style/summary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/gft_day"
                style="@style/summary_text.editcenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/TextView04"
                style="@style/summary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/gft_year"
                style="@style/summary_text.editcenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/date_error"
            style="@style/summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_date"
            android:textColor="@color/error_red"
            android:textSize="12sp" />
        <LinearLayout
            android:id="@+id/value_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/from"
                style="@style/summary_text"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="right"
                android:text="Total Value of Gift:"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/totalvalue"
                style="@style/summary_text"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text=""
                android:textColor="@color/dollar_green"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/selected_src_list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/white"
        android:isScrollContainer="false"
        android:scrollbars="vertical" >
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/new_gift_add_source"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_source" />
        <Button
            android:id="@+id/edit_contribution"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Remove Source"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/new_gift_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp" />
        <Button
            android:id="@+id/new_gift_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>